--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,24 +1,23 @@
 <section class="todoapp">
 	<header class="header">
 		<h1><%= @list.name %></h1>
-		<input class="new-todo" placeholder="Add an item..." autofocus="">
+		<%= form_for([@list, @item]) do |f| %> <!-- create a form for an item that is associated with this list -->
+            <%= f.text_field :description, :class => "new-todo" %>
+            <%= f.submit :style => "display: none" %>
+        <% end %>
 	</header>
 
 	<section class="main">
 		<input id="toggle-all" class="toggle-all" type="checkbox">
 		<label for="toggle-all">Mark all as complete</label>
 		<ul class="todo-list">
-            <li>
-                <div class="view">
-                    <label>Milk</label>
-                </div>
-            </li>
-
-            <li>
-                <div class="view">
-                    <label>cookies</label>
-                </div>
-            </li>
+            <% @list.items.each do |item| %>
+                <li>
+                    <div class="view">
+                        <label><%= item.description %></label>
+                    </div>
+                </li>
+            <% end %>
         </ul>
     </section>
     
