--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,7 +2,7 @@
 	<header class="header">
 		<h1><%= @list.name %></h1>
 		<%= form_for([@list, @item]) do |f| %> <!-- create a form for an item that is associated with this list -->
-            <%= f.text_field :description, :class => "new-todo" %>
+            <%= f.text_field :description, class: "new-todo", placeholder: (@item.errors.full_messages_for(:description).first || "Enter a new item...") %>
             <%= f.submit :style => "display: none" %>
         <% end %>
 	</header>
